# FptnClient-iOS

./: .gitignore  .gitmodules  README.md
FptnLib/: .gitignore  CMakeLists.txt  conan-device-profile  conan-ios-profile  conan-simulator-profile  conan_toolchain.cmake  conanfile.py
FptnLib/src/: WrapperHttpsClientBridge.cpp
FptnLib/src/https/: WrapperHttpsClientBridge.h
FptnLib/src/websocket/: WrapperWebsocketClientBridge.cpp  WrapperWebsocketClientBridge.h
FptnVPN/: ContentView.swift  FptnVPNApp.swift  LoginView.swift  ProjectData.swift
FptnVPN.xcodeproj/: project.pbxproj
FptnVPN.xcodeproj/xcuserdata/stanislav.xcuserdatad/xcschemes/: xcschememanagement.plist
FptnVPN/Assets.xcassets/toggle_button_off.imageset/: Contents.json
FptnVPN/Assets.xcassets/toggle_button_on.imageset/: Contents.json
FptnVPN/Cpp/: FptnVPN-Bridging-Header.h  HttpsClientBridge.mm  HttpsClientSwift.swift  WebsocketClientBridge.mm
FptnVPN/Cpp/Wrappers/: HttpsClientSwift.swift  WebScoketClientBridge.swift
FptnVPN/Cpp/fptn.xcframework/: Info.plist
FptnVPN/FptnVPNTunnel/: PacketTunnelProvider.swift
FptnVPN/Models/: FPTNToken.swift  VPNConnection.swift  VPNServer.swift
FptnVPN/Services/: ServerSelectionService.swift  TokenService.swift  VPNService.swift
FptnVPN/Utilities/: NetworkUtils.swift
FptnVPN/Views/: HomeView.swift  LoginView.swift  ServerListView.swift
FptnVPNTests/: FptnVPNTests.swift
FptnVPNTunnel/: AppProxyProvider.swift  FptnVPNTunnel.entitlements  FptnVPNTunnelDebug.entitlements
FptnVPNUITests/: FptnVPNUITests.swift  FptnVPNUITestsLaunchTests.swift
